criando foorter e adicionando os estilos
Signed-off-by: YgorLino <ygorlino11@gmail.com>

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,4 +2,5 @@
 src="/assets/imagens/banner-homepage.png" 
 alt="Banner da aplicação jornada">
 </app-banner>
+<app-footer></app-footer>
 <app-container></app-container>
