--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,23 @@
-<p>footer works!</p>
+
+<div class="footer">
+    <figure >
+        <img class="img-banner" src="/assets/imagens/banner-homepage-rodape.png" alt="banner footer">
+    </figure>
+    <app-container>
+    <div class="testes">
+        <div class="jornada-atendimento">
+            <img class="img-footer" src="/assets/imagens/logo-com-tagline.png" alt="logo-rodape">
+            <p>Horário de atendimento: 08 - 20h (Segunda a Sábado)</p>
+            <p>Desenvolvido por Alura. Projeto fictício sem fins comerciais</p>
+        </div>
+        <div class="icons-sociais">
+            <p>Acesse nossas redes:</p>
+            <div class="imagens-sociais">
+                <img src="/assets/icones/instagram.png" alt="">
+                <img src="/assets/icones/whatsapp.png" alt="">
+                <img src="/assets/icones/twitter.png" alt="">
+            </div>
+        </div>
+    </div>
+    </app-container>
+</div>
