--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,5 +2,21 @@
 src="/assets/imagens/banner-homepage.png" 
 alt="Banner da aplicação jornada">
 </app-banner>
+<app-container>
+    <h2>Promoções</h2>
+    <div class="card-wharpper">
+        <app-card-busca></app-card-busca>
+        <app-card-busca></app-card-busca>
+        <app-card-busca></app-card-busca>
+        <app-card-busca></app-card-busca>
+        <app-card-busca></app-card-busca>
+        <app-card-busca></app-card-busca>
+    </div>
+    <h2>Depoimentos</h2>
+    <div class="card-wharpper">
+        <app-card-depoimentos></app-card-depoimentos>
+        <app-card-depoimentos></app-card-depoimentos>
+        <app-card-depoimentos></app-card-depoimentos>
+    </div>
+</app-container>
 <app-footer></app-footer>
-<app-container></app-container>
