--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,6 +3,7 @@ src="/assets/imagens/banner-homepage.png"
 alt="Banner da aplicação jornada">
 </app-banner>
 <app-container>
+    <app-form-busca></app-form-busca>
     <h2>Promoções</h2>
     <div class="card-wharpper">
         <app-card-busca></app-card-busca>
