adicionando formulario de busca

--- a/src/app/shared/form-busca/form-busca.component.scss
+++ b/src/app/shared/form-busca/form-busca.component.scss
@@ -3,6 +3,7 @@
     display: block;
     background: #F5F5F5;
     border-radius: 10px;
+    width: 100%;
     h2{
       font-family: Roboto;
       font-size: 32px;
