--- a/src/app/shared/form-busca/form-busca.component.html
+++ b/src/app/shared/form-busca/form-busca.component.html
@@ -14,5 +14,41 @@
                 <mat-chip-option>Econômica</mat-chip-option>
             </mat-chip-listbox>
         </div>
+        <div class="flex-container">
+            <mat-form-field class="input-container" appearance="outline">
+                <mat-label>Origem</mat-label>
+                <mat-icon matPrefix>
+                    flight_takeoff
+                </mat-icon>
+                <input matInput placeholder="Origem">
+                <mat-icon matSuffix>search</mat-icon>
+            </mat-form-field>
+            <button mat-icon-button class="icon-arrow-front-back">
+                <mat-icon>sync_alt</mat-icon>
+            </button>
+            <mat-form-field class="input-container" appearance="outline">
+                <mat-label>Destino</mat-label>
+                <mat-icon matPrefix>
+                    flight_land
+                </mat-icon>
+                <input matInput placeholder="Origem">
+                <mat-icon matSuffix>search</mat-icon>
+            </mat-form-field>
+            <!-- <mat-form-field>
+                <mat-label>Data de ida</mat-label>
+                <input matInput [matDatepicker]="picker">
+                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Data de volta</mat-label>
+                <input matInput [matDatepicker]="picker">
+                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+            <mat-card-actions>
+                <button mat-flat-button color="primary">Buscar</button>
+            </mat-card-actions> -->
+        </div>
     </form>
 </app-card>
