--- a/src/app/shared/form-busca/form-busca.component.html
+++ b/src/app/shared/form-busca/form-busca.component.html
@@ -9,11 +9,10 @@
                 </mat-button-toggle>
                 <mat-button-toggle>SOMENTE IDA</mat-button-toggle>
             </mat-button-toggle-group>
-            
-            <mat-chip-option>1 Adulto</mat-chip-option>
-            
-            <mat-chip-option>Econômica</mat-chip-option>
-            
+            <mat-chip-listbox (click)="openDialog()" aria-label="opces">
+                <mat-chip-option>Adulto</mat-chip-option>
+                <mat-chip-option>Econômica</mat-chip-option>
+            </mat-chip-listbox>
         </div>
         <div class="flex-container">
             <mat-form-field class="input-container" appearance="outline">
